--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,8 @@
       ]
     }
   ],
-  "options_page": "html/options.html"
+  "options_page": "html/options.html",
+  "permissions": [
+    "storage"
+  ]
 }
