--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
     }
   ],
   "options_page": "html/options.html",
+  "options_ui": {
+    "page": "html/options.html"
+  },
   "permissions": [
     "storage"
   ]
